4am? we meet again.

--- a/package.json
+++ b/package.json
@@ -1,13 +1,25 @@
 {
+  "name": "toast-site",
+  "description": "Our first toast site!",
+  "version": "0.1.0",
+  "author": "<Your name>",
   "dependencies": {
     "@sector/breadbox": "^0.0.4",
     "serve": "^11.3.2",
     "toast": "^0.3.6"
   },
+  "license": "OBSD",
   "scripts": {
     "build": "toast incremental .",
     "serve": "serve public",
-    "postinstall": "breadbox --dest public/web_module"
+    "postinstall": "breadbox --dest public/web_modules"
   },
-  "type": "module"
+  "type": "module",
+  "snowpack": {
+    "installOptions": {
+      "alias": {
+        "react": "preact/compat"
+      }
+    }
+  }
 }
